fix bg and scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
+  background-image: linear-gradient(to bottom right, #130110, #1b2047);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -16,12 +17,12 @@ body {
 
 /* Track */
 .category-scrollbar::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #140415;
 }
 
 /* Handle */
 .category-scrollbar::-webkit-scrollbar-thumb {
-  background: #dddddd;
+  background: #3d3d3d;
   border-radius: 5px;
 }
 
